# Fishman

backend/: alembic.ini  pyproject.toml  requirements.txt  setup,py
backend/app/: config.py  main.py  schema.py
backend/app/controller/: authentication.py  users.py
backend/app/model/: person.py  user_role.py
backend/app/repository/: base_repo.py  users.py
backend/app/service/: auth_service.py  users.py
backend/migrations/versions/: 0c72783fb919_new_inititing.py  f1170787121a_test.py
frontend/: package-lock.json  package.json
frontend/src/: App.js  index.js
frontend/src/pages/authentication/: ForgotForm.js  LoginForm.js  RegisterForm.js
frontend/src/pages/home/: Header.js  MainPage.js  ProductList.js  home.js
